cursor-opus/force-app/main/default/objects/CSV_Processing_Result__c/CSV_Processing_Result__c.object-meta.xml
<CustomObject>
    <label>CSV Processing Result</label>
    <pluralLabel>CSV Processing Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Processing ID</label>
        <type>AutoNumber</type>
        <displayFormat>CSV-{0000000}</displayFormat>
    </nameField>
</CustomObject> 