cursor-opus/force-app/main/default/objects/CSV_Processing_Result__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField> 