cursor-opus/force-app/main/default/objects/CSV_Processing_Result__c/fields/Row_Data__c.field-meta.xml
<CustomField>
    <fullName>Row_Data__c</fullName>
    <label>Row Data</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField> 